--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@kinde-oss/kinde-auth-nextjs": "^2.2.13",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
@@ -23,6 +24,7 @@
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
     "react": "^18",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
     "tailwind-merge": "^2.3.0",
@@ -33,6 +35,7 @@
     "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-date-range": "^1.4.9",
     "@types/react-dom": "^18",
     "postcss": "^8",
     "prisma": "^5.14.0",
